bk_ida/gccida/c3/copyprop_hardreg_forward_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2015:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+58h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2040:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2047:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_ops = recog_data_0.n_operands; 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2055:73: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( matches >= 0 || recog_op_alt[i][alt].matched >= 0 || predicated && recog_data_0.operand_type[i] == OP_OUT ) 
                                                                        ^~~~~~~~~~~~
                                                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2056:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_type[i] = OP_INOUT; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2061:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
kill_value( recog_data_0.operand[ia], vd); 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2068:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
kill_value( recog_data_0.operand[ib], vd); 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2072:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)v21[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2115:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)src)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2116:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)src)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2160:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[vd->e[regno].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2161:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = mode_class_0[vd->e[regno].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2172:33: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
newa = find_oldest_value_reg( ( reg_class)regclass_map[regno], src, vd); 
                                ^~~~~~~~~
                                regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2172:43: error: expected ')'
newa = find_oldest_value_reg( ( reg_class)regclass_map[regno], src, vd); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2172:29: note: to match this '('
newa = find_oldest_value_reg( ( reg_class)regclass_map[regno], src, vd); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2196:22: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&newb[1] = src[1]; 
                     ^ ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2216:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[ic] != 61 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2217:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[ic]->fld[0].rtint != recog_data_0.operand[ic][1]) ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2217:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[ic]->fld[0].rtint != recog_data_0.operand[ic][1]) ) 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/regrename.c:2217:43: error: invalid operands to binary expression ('int' and 'struct rtx_def')
|| recog_data_0.operand[ic]->fld[0].rtint != recog_data_0.operand[ic][1]) ) 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward_1/src/obj/regrename.o] Error 1
